# rsb-protocol

./: .cproject  .project  CMakeLists.txt  FindRSBProtocol.cmake  RSBProtocolBuildTreeSettings.cmake.in  RSBProtocolConfig-version.cmake.in  RSBProtocolConfig.cmake.in  qiproject.xml
RSBProtocol/: Protocol.proto  Protocol.proto.in
project/: build_vs.bat  build_vs9.bat
proto/: CMakeLists.txt
proto/rsb/protocol/: Notification.proto
proto/rsb/protocol/introspection/: Bye.proto  Hello.proto  __package.proto
proto/rsb/protocol/operatingsystem/: Host.proto  Process.proto  __package.proto
rsb/protocol/: EventMetaData.proto  FragmentedNotification.proto  Notification.proto  Notification.proto.in
rsb/protocol/collections/: EventsByScopeMap.proto
rsbprotocol/: Attachment.proto  MetaData.proto  Notification.proto  Protocol.proto.in
rsbprotocol/collections/: EventsByScopeMap.proto
rsbprotocol/introspection/: PortStateChange.proto
test/data/: README.txt  event-id-cases.txt  generate-event-id-test-cases.lisp
